--- a/WMS.Frontend/src/app/attendance/attendance-list/attendance-list.component.scss
+++ b/WMS.Frontend/src/app/attendance/attendance-list/attendance-list.component.scss
@@ -88,10 +88,6 @@
     .filter-field {
       width: 160px;
     }
-    
-    ::ng-deep .mat-mdc-form-field-subscript-wrapper {
-      display: none;
-    }
   }
 }
 
