--- a/WMS.Frontend/src/app/audit-logs/audit-log-list/audit-log-list.component.scss
+++ b/WMS.Frontend/src/app/audit-logs/audit-log-list/audit-log-list.component.scss
@@ -26,9 +26,6 @@
   border-radius: 8px;
   margin-bottom: 24px;
 
-  mat-form-field {
-    margin-bottom: -1.25em; /* Adjust to remove extra margin at the bottom of mat-form-field */
-  }
 }
 
 .table-container {
