--- a/WMS.Frontend/src/app/projects/allocation-management/allocation-management.component.scss
+++ b/WMS.Frontend/src/app/projects/allocation-management/allocation-management.component.scss
@@ -34,7 +34,6 @@
   
   mat-form-field {
     width: 250px;
-    margin-bottom: -1.25em; /* Adjust to remove extra margin at the bottom of mat-form-field */
   }
 }
 
